Corrected  Module 2 notebook with minor errors

--- a/module_2/homework.ipynb
+++ b/module_2/homework.ipynb
@@ -276,7 +276,7 @@
     "id": "5259854b-65a5-4fd0-a8b9-87a41ce4835d"
    },
    "source": [
-    "### Q6. Evaluating the model"
+    "### Q6. Promote the best model to the model registry"
    ]
   },
   {
